@@ -40,61 +40,75 @@ public class SnapshotIT extends IntegrationTestBase {
     }
 
     @Test
-    public void testSnapshot() throws Exception {
-        final Configuration config = defaultJdbcConfigBuilder()
-                .with(SingleStoreDBConnectorConfig.DATABASE_INCLUDE_LIST, TEST_DATABASE)
-                .build();
+    public void testSnapshotA() throws Exception {
+        final Configuration config = defaultJdbcConfigWithTable("A");
 
         start(SingleStoreDBConnector.class, config);
         assertConnectorIsRunning();
-        final SourceRecords recordsA = consumeRecordsByTopic(3);
-        final List<SourceRecord> table1 = recordsA.recordsForTopic(TEST_TOPIC_PREFIX + "." + TEST_DATABASE + ".A")
-                .stream().sorted(Comparator.comparingInt(v -> (Integer) ((Struct) v.key()).get("pk"))).collect(Collectors.toList());
-        assertThat(table1).hasSize(3);
 
-        for (int i = 0; i < 3; i++) {
-            final SourceRecord record1 = table1.get(i);
-            final List<SchemaAndValueField> expectedKey1 = List.of(
-                    new SchemaAndValueField("pk", SchemaBuilder.int32().defaultValue(0).required().build(), i));
+        try {
+            final SourceRecords recordsA = consumeRecordsByTopic(3);
+            final List<SourceRecord> table1 = recordsA.recordsForTopic(TEST_TOPIC_PREFIX + "." + TEST_DATABASE + ".A")
+                    .stream().sorted(Comparator.comparingInt(v -> (Integer) ((Struct) v.key()).get("pk"))).collect(Collectors.toList());
+            assertThat(table1).hasSize(3);
+            
+            for (int i = 0; i < 3; i++) {
+                final SourceRecord record1 = table1.get(i);
+                final List<SchemaAndValueField> expectedKey1 = List.of(
+                        new SchemaAndValueField("pk", SchemaBuilder.int32().defaultValue(0).required().build(), i));
+                final List<SchemaAndValueField> expectedRow1 = Arrays.asList(
+                        new SchemaAndValueField("pk", SchemaBuilder.int32().defaultValue(0).required().build(), i),
+                        new SchemaAndValueField("aa", Schema.OPTIONAL_STRING_SCHEMA, "test" + i));
+                final Struct key1 = (Struct) record1.key();
+                final Struct value1 = (Struct) record1.value();
+                assertRecord(key1, expectedKey1);
+                assertRecord((Struct) value1.get("after"), expectedRow1);
+                assertThat(record1.sourceOffset())
+                        .extracting("snapshot").containsExactly(true);
+//              assertThat(record1.sourceOffset())
+//                        .extracting("snapshot_completed").containsExactly(i == 2);
+                assertNull(value1.get("before"));
+            }
+        } finally {
+            stopConnector();
+        }
+    }
+
+    @Test
+    public void testSnapshotB() throws Exception {
+        final Configuration config = defaultJdbcConfigWithTable("B");
+
+        start(SingleStoreDBConnector.class, config);
+        assertConnectorIsRunning();
+        
+        try {
+            final SourceRecords recordsB = consumeRecordsByTopic(1);
+            final List<SourceRecord> table2 = recordsB.recordsForTopic(TEST_TOPIC_PREFIX + "." + TEST_DATABASE + ".B");
+            assertThat(table2).hasSize(1);
+            final SourceRecord record1 = table2.get(0);
             final List<SchemaAndValueField> expectedRow1 = Arrays.asList(
-                    new SchemaAndValueField("pk", SchemaBuilder.int32().defaultValue(0).required().build(), i),
-                    new SchemaAndValueField("aa", Schema.OPTIONAL_STRING_SCHEMA, "test" + i));
+                    new SchemaAndValueField("aa", Schema.OPTIONAL_INT32_SCHEMA, 0),
+                    new SchemaAndValueField("bb", Schema.OPTIONAL_STRING_SCHEMA, "testUpdated"));
             final Struct key1 = (Struct) record1.key();
             final Struct value1 = (Struct) record1.value();
-            assertRecord(key1, expectedKey1);
             assertRecord((Struct) value1.get("after"), expectedRow1);
             assertThat(record1.sourceOffset())
-                    .extracting("snapshot").isEqualTo(true);
-//            assertThat(record1.sourceOffset())
-//                    .extracting("snapshot_completed").containsExactly(i == 2);
+                    .extracting("snapshot").containsExactly(true);
+//          assertThat(record1.sourceOffset())
+//                  .extracting("snapshot_completed").containsExactly(false);
             assertNull(value1.get("before"));
+            assertNotNull(key1.get("internalId"));
+            assertEquals(Schema.Type.STRUCT, key1.schema().type());
+            assertEquals(Schema.Type.INT64, key1.schema().fields().get(0).schema().type());
+
+        } finally {
+            stopConnector();
         }
-        final SourceRecords recordsB = consumeRecordsByTopic(1);
-        final List<SourceRecord> table2 = recordsB.recordsForTopic(TEST_TOPIC_PREFIX + "." + TEST_DATABASE + ".B");
-        assertThat(table2).hasSize(1);
-        final SourceRecord record1 = table2.get(0);
-        final List<SchemaAndValueField> expectedRow1 = Arrays.asList(
-                new SchemaAndValueField("aa", Schema.OPTIONAL_INT32_SCHEMA, 0),
-                new SchemaAndValueField("bb", Schema.OPTIONAL_STRING_SCHEMA, "testUpdated"));
-        final Struct key1 = (Struct) record1.key();
-        final Struct value1 = (Struct) record1.value();
-        assertRecord((Struct) value1.get("after"), expectedRow1);
-        assertThat(record1.sourceOffset())
-                .extracting("snapshot").isEqualTo(true);
-//        assertThat(record1.sourceOffset())
-//                .extracting("snapshot_completed").containsExactly(false);
-        assertNull(value1.get("before"));
-        assertNotNull(key1.get("internalId"));
-        assertEquals(Schema.Type.STRUCT, key1.schema().type());
-        assertEquals(Schema.Type.INT64, key1.schema().fields().get(0).schema().type());
     }
 
     @Test
     public void testSnapshotFilter() throws InterruptedException {
-        final Configuration config = defaultJdbcConfigBuilder()
-                .with(SingleStoreDBConnectorConfig.DATABASE_INCLUDE_LIST, TEST_DATABASE)
-                .with(SingleStoreDBConnectorConfig.TABLE_NAME, "B")
-                .build();
+        final Configuration config = defaultJdbcConfigWithTable("B");
 
         start(SingleStoreDBConnector.class, config);
         assertConnectorIsRunning();
@@ -104,7 +118,10 @@ public class SnapshotIT extends IntegrationTestBase {
     }
 
     private void assertRecord(Struct record, List<SchemaAndValueField> expected) {
-        expected.forEach(schemaAndValueField -> schemaAndValueField.assertFor(record));
+        expected.forEach(schemaAndValueField -> {
+            schemaAndValueField.assertFor(record);
+            
+        });
     }
 
     @Override
